--- a/labe-pizza-exercicio/style.css
+++ b/labe-pizza-exercicio/style.css
@@ -11,16 +11,16 @@
 */
 
 body{
-   
+   background-color: #ccc;
 }
 
 
 
 
 header{
-    
+    background-color: rgb(0, 140, 255);
     padding: 1em;
-    
+    height: 4vw;
 }
 
 .logo{
@@ -29,45 +29,51 @@ header{
 }
 
 main{
-    
     height: 100vh;
 }
 
 
 section{    
-   
-    
-    padding: 2em;
- 
-    
-
+    padding: 5em;
+    border: 1em solid rgb(0, 140, 255);
+    border-radius: 25px;
+    height: 0.5vh;
+    margin: 2em;
+    color: white;
+    background-color: rgb(0, 140, 255);
 }
 
 .item-1{
     float: left;
- 
-
+    border-radius: 25px;
 }
 
 
 .item-2{
-   
-    
+    border-radius: 25px;
+    float: right;
 }
 
 
 .preco{
-    
+    margin-top: 10vh;
 }
 
 img{
-    
+    width: 10vw;
+    border-radius: 5px;
 }
 
 
 button{
     margin-top: 2em;
-    
+    background-color: orange;
+    color: white;
+    padding: 0.5vw;
+    border-radius: 10px;
+    width: 10vw;
+    height: 2vw;
+    border: 0px;
 }
 
 button:hover{
@@ -77,15 +83,11 @@ button:hover{
 
 
 footer{
-   
     padding: 2em;
-    
-
 }
 
 
 .footer-text{
     margin-top: 20px;
-   
-
+    text-align: center;
 }
